capabilities/podfile-deny-add-CAP_SETUID.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pause-capabilities-setuid
  labels:
    app: pause-capabilities-setuid
spec:
  containers:
  - name: pause
    image: k8s.gcr.io/pause
    securityContext:
      capabilities:
        add: ["CAP_NET_RAW"]
