capabilities/ky-mutate-default-capabilities-add.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-default-capabilities
spec:
  rules:
    - name: mutate-default-proc-mount
      match:
        resources:
          kinds:
            - Pod
      mutate:
        overlay:
          spec:
            containers:
            - (name): "*"
              securityContext:
                capabilities:
                  (drop):
                  - "!CAP_NET_RAW"
                  add:
                  - "CAP_NET_RAW"
