capabilities/ky-template-policy-whitelist-capabilities.yaml
# maartenvdezz & frankwiersma
# 24-06-2021
# Whitelist capabilities

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: whitelist-add-capabilities
  annotations:
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Capabilities permit privileged actions without giving full root access.
      Adding capabilities beyond the default set must not be allowed.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: whitelistcapabilities
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Adding of additional capabilities beyond the default set is not allowed.
          The fields spec.containers[*].securityContext.capabilities.add and 
          spec.initContainers[*].securityContext.capabilities.add must be empty.
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(capabilities):
                    add: "CAP_SETUID"
